# ai-knowledge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  Config.py  Dockerfile  LICENSE  Makefile  README.md  __main__.py  _add_markdowns.py  _generate.py  document.sh  index.md  main.py  pyproject.toml  requirements.txt  sandbox.py  settings.json  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/: CODEOWNERS  documentation.yml
.github/workflows/: claude.yml  pre-commit-update.yml
.project_doc_record/: meta-info.json  project_hierarchy.json
_generate_scripts/: copy.py  create_project_folder.py  generate_modifications.py  pick_template.py
_src_alternatives/main/: config.py  custom_argument_parser.py
_src_alternatives/pre_commit_hook/: config.py
_src_alternatives/pre_commit_hook/transform/: modify_file.py
_templates/database/: docker-compose.yml  pyproject.toml
_templates/database/src/: config.py
_templates/database/src/models/: Config.py  __init__.py  base.py  connection.py  result.py  user.py
_templates/default/: pyproject.toml
_templates/default/src/: config.py  custom_argument_parser.py
_templates/django/: pyproject.toml
_templates/django/root/: settings.py
_templates/fast_api/: pyproject.toml  server.py
_templates/fast_api/clients/: slack_client.py
_templates/langgraph/: config.py  consts.py  context.py  graph_builder.py  langgraph.json  main.py  pyproject.toml  server.py  state.py  user_profile.py
_templates/langgraph/models/: formatting.py  langgraph_model.py
_templates/langgraph/nodes/: __init__.py  base.py  init.py
_templates/langgraph/services/: model_manager.py
_templates/langgraph/utils/: base_model_json_encoder.py  error_handling.py  filter_output_message.py  filter_tool_message.py  formatting_manager.py
_templates/pre_commit_hook/: .pre-commit-hooks.yaml  pyproject.toml
_templates/pre_commit_hook/src/: __init__.py  __main__.py  _settings.py  _transaction.py  config.py  main.py  transaction.py
_templates/pre_commit_hook/src/modify_file/: __init__.py  _modify_file.py
_templates/pre_commit_hook/src/transform/: _transformer.py  modify_file.py  transformer.py
_templates/pre_commit_hook/tests/: test_import.py
_templates/python_package/: pyproject.toml
_templates/python_package/.github/workflows/: poetry-version-patch.yml
_templates/web_scraper/: pyproject.toml
_templates/web_scraper/src/: config.py  custom_argument_parser.py
agents/: .pydantic-cli-builder.md.swp
commands/: gh-address-comments  gh-fix-ci  linear
dnd_character_creator/server/: app.py
dnd_character_creator/server/tests/: test_create_character.py
docs/source/: _add_markdowns.md  conf.py  index.rst  main.md  src.rst
docs/source/src/: Config.md  __init__.md  _custom_argument_parser.md  config.md  custom_argument_parser.md
docs/src/: _custom_argument_parser.md
files/: __init__.py  _types.py  code_owners_file.py  file.py  mit_license.py  package_init_py.py  package_pyproject_toml.py  pre_commit_config.py  pre_commit_run_workflow.py  py_typed_file.py  python_version_file.py  readme.py  setup_script.py  stub_generation_workflow.py  test_import_file.py  tests_workflow.py  version_patch_workflow.py
hooks/: dataclass_advisor.py  generic_return_advisor.py  literal_advisor.py  match_statement_advisor.py  notify.py  open_closed_advisor.py
setup/: github.py  repo_settings.py  setup.sh
skills/python-style/: SKILL.md
src/: __main__.py  _custom_argument_parser.py  config.py
src/files/: __init__.py  _base.py  _types.py  code_owners_file.py  devcontainer.py  file.py  gitignore.py  mit_license.py  package_init_py.py  package_pyproject_toml.py  pre_commit_config.py  pre_commit_run_workflow.py  py_typed_file.py  python_version_file.py  readme.py  setup_script.py  test_import_file.py  tests_workflow.py  version_patch_workflow.py
src/files/claude/: __init__.py  claude_settings.py
src/files/github/: code_owners_file.py
src/files/github/workflows/: claude_review_workflow.py  pre_commit_config.py  pre_commit_run_workflow.py  tests_workflow.py  version_patch_workflow.py
src/files/src/: package_init_py.py
src/setup/: __init__.py  branch_protection_settings.py  github.py  repo_settings.py  setup.sh
src/templates/: __init__.py  _base.py  _type.py  cli_package.py  null.py  package.py
templates/: __init__.py  _base.py  _type.py  cli_package.py  null.py  package.py
tests/: test_fix_pydantic_stubs.py
topics/python/: exception_handling.md
