[project]
name = "projectblueprint"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pygithub>=2.9.0",
]

[dependency-groups]
dev = [
    "pre-commit",
]


[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "E501", "S101", "S603", "S607", "COM812", "EM102", "TRY003", "TC001", "TC002", "TC003"]

[tool.mypy]
plugins = ["pydantic.mypy"]
