[project]
name = "$project_name_low"
version = "0.1.0"
description = "$description"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1.1",
    "pre-commit>=3.7.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "root"]
