[tool.poetry]
name = "{project_name_low}"
version = "0.1.0"
description = "{description}"
authors = ["Tesla2000 <fratajczak124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.1"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
toml = "^0.10.2"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

[tool.poetry.group.deployment.dependencies]
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
