[project]
name = "$project_name_low"
version = "0.1.0"
description = "$description"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pre-commit>=3.7.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]
deployment = [
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clients", "services", "utils"]
