[tool.poetry]
name = "{project_name_low}"
version = "0.1.0"
description = "{description}"
authors = ["Tesla2000 <fratajczak124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.1"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
toml = "^0.10.2"
langgraph = "^0.2.60"
langchain-core = "^0.3.29"
langchain-community = "^0.3.14"
langchain-openai = "^0.2.14"
trustcall = "^0.0.26"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
