[tool.poetry]
name = "{project_name_low}"
version = "0.1.0"
description = "{description}"
authors = ["Tesla2000 <fratajczak124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
libcst = "^1.4.0"
toml = "^0.10.2"
more-itertools = "^10.7.0"
config-parser = {git = "https://github.com/Tesla2000/ConfigParser"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
{pydantic_extra}

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
{project_name_low} = "{project_script_name}:main"
