[tool.poetry]
name = "{project_name_low}"
version = "0.1.0"
description = "{description}"
authors = ["Tesla2000 <fratajczak124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
libcst = "^1.4.0"
toml = "^0.10.2"
more-itertools = "^10.7.0"
pydantic-settings = "^2.10.1"
{utility_functions}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
{project_name_low} = "{project_script_name}:main"
