[project]
name = "$project_name_low"
version = "0.1.0"
description = "$description"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "libcst>=1.4.0",
    "toml>=0.10.2",
    "more-itertools>=10.7.0",
    "pydantic-settings>=2.10.1",
    $utility_functions
]

[project.scripts]
$project_name_low = "$project_script_name:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["$project_name_low"]
